--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Truth-about-an-Author_66661
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 66661-h/images/author_cover.jpg
 creator:
   author:
     agent_name: Bennett, Arnold
@@ -12,6 +15,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/859
     wikipedia: https://en.wikipedia.org/wiki/Arnold_Bennett
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/66661#The-Truth-about-an-Author
 gutenberg_issued: '2021-11-04'
 identifiers:
   gutenberg: '66661'
